--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   sensors_plus: ^1.3.2
+  camera: ^0.8.1+1
+  path_provider: ^2.0.10
   flutter:
     sdk: flutter
 
