--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android_data_logger">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
    <application
+       android:requestLegacyExternalStorage="true"
         android:label="android_data_logger"
         android:icon="@mipmap/ic_launcher">
         <activity
