--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   sensors_plus: ^1.3.2
   camera: ^0.8.1+1
   path_provider: ^2.0.10
+  archive: ^3.1.2
+  permission_handler: ^7.0.0
+#  downloads_path_provider: ^0.1.0
   flutter:
     sdk: flutter
 
