--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   path_provider: ^2.0.10
   archive: ^3.1.2
   permission_handler: ^7.0.0
+
+  floatingpanel: ^1.1.3
 #  downloads_path_provider: ^0.1.0
   flutter:
     sdk: flutter
