--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   archive: ^3.1.2
   permission_handler: ^7.0.0
 
+  image_picker: ^0.8.5+3
+  image: ^3.0.1
   floatingpanel: ^1.1.0
 #  downloads_path_provider: ^0.1.0
   flutter:
