--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   archive: ^3.1.2
   permission_handler: ^7.0.0
 
+  gallery_saver: ^2.3.2
   image_picker: ^0.8.5+3
   image: ^3.0.1
   floatingpanel: ^1.1.0
