--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   image_picker: ^0.8.5+3
   image: ^3.0.1
   floatingpanel: ^1.1.0
+
+  fluttertoast: ^8.0.9
+  video_player: ^2.0.0
 #  downloads_path_provider: ^0.1.0
   flutter:
     sdk: flutter
