--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   sensors_plus: ^1.3.2
+  motion_sensors: ^0.1.0
+
   camera: ^0.8.1+1
   path_provider: ^2.0.10
   archive: ^3.1.2
@@ -36,8 +38,9 @@ dependencies:
   gallery_saver: ^2.3.2
   image_picker: ^0.8.5+3
   image: ^3.0.1
-  floatingpanel: ^1.1.0
+  shared_preferences: ^2.0.15
 
+  floatingpanel: ^1.1.0
   fluttertoast: ^8.0.9
   video_player: ^2.0.0
 #  downloads_path_provider: ^0.1.0
